Query the data directly without a message channel

--- a/packages/package_info/pubspec.yaml
+++ b/packages/package_info/pubspec.yaml
@@ -21,6 +21,8 @@ flutter:
 dependencies:
   flutter:
     sdk: flutter
+  package_info_windows:
+    path: ./package_info_windows
 
 dev_dependencies:
   flutter_test:
